// Copyright 2021 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Shield 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/06/PolyForm-Shield-1.0.0.txt.

syntax = "proto3";

package io.harness.pms.contracts.plan;

option java_multiple_files = true;

message ExecutionTriggerInfo {
  TriggerType triggerType = 1;
  TriggeredBy triggeredBy = 2;
  bool isRerun = 3;
  RerunInfo rerunInfo = 4;
}

message TriggeredBy {
  string uuid = 1;
  string identifier = 2;
  map<string, string> extraInfo = 3;
}

enum TriggerType {
  NOOP = 0;
  MANUAL = 1;
  WEBHOOK = 2;
  WEBHOOK_CUSTOM = 3;
  SCHEDULER_CRON = 4;
}

message RerunInfo {
  string rootExecutionId = 1;
  TriggerType rootTriggerType = 2;

  string prevExecutionId = 3;
  TriggerType prevTriggerType = 4;
}
